--- a/src/components/Chart/ChartBar.css
+++ b/src/components/Chart/ChartBar.css
@@ -7,10 +7,13 @@
 
 .chart-bar__inner {
   height: 100%;
-  width: 100%;
-  border: 1px solid #313131;
+  width: 55%;
+  border: 0.8px solid #313131;
+  margin: 0;
+  padding: 0;
   border-radius: 12px;
-  background-color: #c3b4f3;
+  background-color: #f9fde6;
+  background-image: url(https://www.transparenttextures.com/patterns/lined-paper.png);
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -18,13 +21,14 @@
 }
 
 .chart-bar__fill {
-  background-color: #4826b9;
+  background-color: #c9d414;
   width: 100%;
   transition: all 0.3s ease-out;
 }
 
 .chart-bar__label {
   font-weight: bold;
-  font-size: 0.5rem;
+  font-size: 0.9rem;
   text-align: center;
+  margin-top: 6px;
 }
