--- a/src/components/Chart/Chart.css
+++ b/src/components/Chart/Chart.css
@@ -1,9 +1,10 @@
 .chart {
   padding: 1rem;
   border-radius: 12px;
-  background-color: #f8dfff;
+  background-color: #e3ffdf;
   text-align: center;
   display: flex;
   justify-content: space-around;
   height: 10rem;
+  box-shadow: 0 2px 12px rgb(0 0 0 / 90%);
 }
