--- a/src/components/NewExpense/NewExpense.css
+++ b/src/components/NewExpense/NewExpense.css
@@ -1,29 +1,32 @@
 .new-expense {
-  background-color: #a892ee;
+  background-color: rgb(59 120 216);
   padding: 1rem;
   margin: 2rem auto;
   width: 50rem;
   max-width: 95%;
   border-radius: 12px;
   text-align: center;
-  box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 15px 21px rgb(0 0 0 / 80%);
 }
 
 .new-expense button {
   font: inherit;
+  font-weight: 900;
   cursor: pointer;
   padding: 1rem 2rem;
-  border: 1px solid #40005d;
-  background-color: #40005d;
+  border: 1px solid white;
+  background-color: #2a2a2ae0;
   color: white;
   border-radius: 12px;
   margin-right: 1rem;
+  box-shadow: 2px 2px 6px rgb(0 0 0 / 80%);
 }
 
 .new-expense button:hover,
 .new-expense button:active {
-  background-color: #510674;
-  border-color: #510674;
+  background-color: black;
+  border-color: white;
+  box-shadow: 5px 5px 10px rgb(0 0 0 / 80%);
 }
 
 .new-expense button.alternative {
