--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,6 @@ html {
 body {
   margin: 0;
   background-color: #3f3f3f;
+  background-color: #b0acb6;
+  background-image: url("https://www.transparenttextures.com/patterns/black-felt.png");
 }
